Philipp reaches top 10 in dissertation competition
June 23, 2022
Philipp has made it in the Top 10 and finals for Dissertations in Germany for the Natural Science/Tech Division. He will defend his work on glucose micro fuel cells in Berlin in the coming week. Congratulations Philipp, and best of luck!

Thomas awarded MIT Energy Initiative Fellowship
June 23, 2022
Drew has been named a 2022-2023 MIT Energy Fellow, in recognition of his ground-breaking work on opto-ionics. Congratulations Thomas!

Drew awarded Accenture Fellowship
June 23, 2022
Drew has been named a 2021=2-2023 Accenture Fellow. The fellowship will support his work on Li-based neuromorphic computing devices. Congratulations Drew!

Prof. Rupp elected to IEEE Neuromorphic Computing Committee
Febuary 7, 2022
Prof. Rupp has been elected to the IEEE Neuomorphic Computing Committee. The committee will serve to support IEEE in fostering and promoting neuromorphic computing hardware as well as research into the underlying physics, electronics, and chemistry. The complete list of the 10 committee members can be found <a href="https://eds.ieee.org/about-eds/governance/technical-committees/neuromorphic-computing-committee" target="_blank">here</a>. 

Group's research featured by DOE Office of Science
January 20, 2022
MIT Material Research Laboratory's coverage on the group's recent publication - <a href="https://www.doi.org/10.1038/s41563-021-01181-2" target="_blank">Photo-enhanced ionic conductivity across grain boundaries in polycrystalline ceramics</a> - was featured on the <a href="https://www.energy.gov/science/listings/university-and-stakeholder-news" target="_blank">homepage</a> of the Department of Energy Office of Science. Congratulations to Thomas and coauthors for this well-deserved recognition! 

Prof. Rupp joins Unifrax Battery Advisory Board
November 11, 2021