@@ -1,3 +1,7 @@
+Prof. Rupp accepts position on the advisory board of Advanced Energy Materials
+June 30, 2022
+Prof. Rupp has accepted a position on the advisory board of Advanced Energy Materials. This reflects Jennifer's and the team's important contributions to the journal and the field at large. Congratulations Jennifer!
+
 Philipp reaches top 10 in dissertation competition
 June 23, 2022
 Philipp has made it in the Top 10 and finals for Dissertations in Germany for the Natural Science/Tech Division. He will defend his work on glucose micro fuel cells in Berlin in the coming week. Congratulations Philipp, and best of luck!
